--- a/client/src/assets/css/sidebar.css
+++ b/client/src/assets/css/sidebar.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    border-right: 1px solid #9DBFAF;
 }
 
 .side-bar-item{
