--- a/client/src/assets/css/uploadImage.css
+++ b/client/src/assets/css/uploadImage.css
@@ -58,3 +58,19 @@
     padding: 5px;
     cursor: pointer;
 }
+
+.turn-back-page{
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 7px;
+  cursor: pointer;
+}
+.turn-back-page p{
+  font-size: 18px;
+}
+.turn-back-page span{
+  color: #9DBFAF;
+  font-weight: 700;
+}
