--- a/client/src/assets/css/uploadImage.css
+++ b/client/src/assets/css/uploadImage.css
@@ -3,7 +3,11 @@
     bottom: 20px;
     right: 20px;
   }
-  
+.upload-image-from-gallery{
+  position: fixed;
+    bottom: 80px;
+    right: 20px;
+}
   .upload {
     display: flex;
     align-items: center;
@@ -73,4 +77,13 @@
 .turn-back-page span{
   color: #9DBFAF;
   font-weight: 700;
+}
+.image-upload .select-image-update{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap:2px;
+}
+.choose-image-upload{
+  border: 1px solid red;
+  border-radius: 2px;
 }
